--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ nav ul li a {
     transition: font-size 0.3s ease; /* Transição suave para o aumento da fonte */
 }
 nav ul li a:hover {
-    background-color: #005b8c;
+    /* Não muda o fundo */
+    background-color: transparent; /* Mantém o fundo transparente */
     font-size: calc(1em + 1px); /* Aumenta a fonte em 1px */
 }
 
@@ -127,6 +128,7 @@ footer {
 .download-link:hover {
     background-color: #005b8c;
 }
+
 
     </style>
 </head>
