--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Vitor Rebello</title>
     <style>
-       /* Estilos gerais */
-body {
+        body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
@@ -22,7 +21,7 @@ body {
 /* Estilo para o menu */
 nav {
     background-color: #0073b1; /* Azul LinkedIn */
-    padding: 15px 0;
+    padding: 25px 0; /* Aumenta o padding para garantir maior distância entre o conteúdo e o menu */
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -54,9 +53,10 @@ nav ul li a:hover {
 /* Estilos para o cabeçalho */
 header {
     text-align: center;
-    padding: 80px 0 20px 0;
+    padding: 100px 0 20px 0; /* Aumenta o padding para afastar mais o conteúdo do menu */
     background-color: #0073b1;
     color: white;
+    margin-top: 20px; /* Adiciona uma margem para afastar mais do topo */
 }
 header h1 {
     font-size: 3em;
@@ -69,7 +69,7 @@ header p {
 
 /* Estilos para as seções */
 section {
-    margin-top: 60px;
+    margin-top: 100px; /* Aumenta o espaçamento entre o menu e a seção */
     margin-bottom: 40px;
 }
 h2 {
@@ -128,7 +128,6 @@ footer {
 .download-link:hover {
     background-color: #005b8c;
 }
-
 
     </style>
 </head>
