--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Vitor Rebello</title>
     <style>
+
         body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -56,7 +57,7 @@ header {
     padding: 100px 0 20px 0; /* Aumenta o padding para afastar mais o conteúdo do menu */
     background-color: #0073b1;
     color: white;
-    margin-top: 20px; /* Adiciona uma margem para afastar mais do topo */
+    margin-top: 70px; /* Adiciona margem superior para garantir que o conteúdo não fique por trás do menu */
 }
 header h1 {
     font-size: 3em;
@@ -69,7 +70,7 @@ header p {
 
 /* Estilos para as seções */
 section {
-    margin-top: 100px; /* Aumenta o espaçamento entre o menu e a seção */
+    margin-top: 60px; /* Adiciona distância extra para não sobrepor com o menu */
     margin-bottom: 40px;
 }
 h2 {
@@ -129,6 +130,7 @@ footer {
     background-color: #005b8c;
 }
 
+        
     </style>
 </head>
 <body>
