--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Vitor Rebello</title>
     <style>
-
         body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
@@ -22,7 +21,7 @@
 /* Estilo para o menu */
 nav {
     background-color: #0073b1; /* Azul LinkedIn */
-    padding: 25px 0; /* Aumenta o padding para garantir maior distância entre o conteúdo e o menu */
+    padding: 15px 0;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -54,10 +53,9 @@ nav ul li a:hover {
 /* Estilos para o cabeçalho */
 header {
     text-align: center;
-    padding: 100px 0 20px 0; /* Aumenta o padding para afastar mais o conteúdo do menu */
+    padding: 80px 0 20px 0;
     background-color: #0073b1;
     color: white;
-    margin-top: 70px; /* Adiciona margem superior para garantir que o conteúdo não fique por trás do menu */
 }
 header h1 {
     font-size: 3em;
@@ -70,7 +68,7 @@ header p {
 
 /* Estilos para as seções */
 section {
-    margin-top: 60px; /* Adiciona distância extra para não sobrepor com o menu */
+    margin-top: 60px;
     margin-bottom: 40px;
 }
 h2 {
@@ -85,7 +83,8 @@ h2 {
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     padding: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    transition: margin-top 0.3s ease;
 }
 ul {
     padding-left: 20px;
@@ -130,7 +129,6 @@ footer {
     background-color: #005b8c;
 }
 
-        
     </style>
 </head>
 <body>
