--- a/index.html
+++ b/index.html
@@ -210,23 +210,24 @@ footer {
         <h2>Certificações</h2>
         <div class="certification-badges">
             <div class="certification-badge">
-                <iframe src="https://api.badgr.io/public/assertions/q1uOn9deTnKXSbNEcIAgJA?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
-                        title="Badge: Desafio Docker" 
-                        style="width: 330px; height: 191px; border: 0px;">
-                </iframe>
-            </div>
-            <div class="certification-badge">
-                <iframe src="https://api.badgr.io/public/assertions/OBCvXvOkRUy6mn4NakLXsw?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
-                        title="Badge: Desafio Kubernetes e AWS" 
-                        style="width: 330px; height: 191px; border: 0px;">
-                </iframe>
-            </div>
-            <div class="certification-badge">
-                <iframe src="https://api.badgr.io/public/assertions/pMb62vRH0E6bxsHgk4ZotQ?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
-                        title="Badge: Desafio AWS" 
-                        style="width: 330px; height: 191px; border: 0px;">
-                </iframe>
-            </div>
+    <iframe src="https://api.badgr.io/public/assertions/pXrp9NVjTFGREbFoeX0GKw?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
+            title="Badge: Desafio Pipeline e Monitoramento" 
+            style="width: 330px; height: 191px; border: 0px;">
+    </iframe>
+</div>
+<div class="certification-badge">
+    <iframe src="https://api.badgr.io/public/assertions/q1uOn9deTnKXSbNEcIAgJA?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
+            title="Badge: Desafio Docker" 
+            style="width: 330px; height: 191px; border: 0px;">
+    </iframe>
+</div>
+<div class="certification-badge">
+    <iframe src="https://api.badgr.io/public/assertions/OBCvXvOkRUy6mn4NakLXsw?embedVersion=1&amp;embedWidth=330&amp;embedHeight=191&amp;identity__email=vitor.rebello%40live.com" 
+            title="Badge: Desafio Kubernetes e AWS" 
+            style="width: 330px; height: 191px; border: 0px;">
+    </iframe>
+</div>
+
         </div>
     </section>
 
