--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Vitor Rebello</title>
     <style>
-        body {
+       /* Estilos gerais */
+body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
@@ -21,7 +22,7 @@
 /* Estilo para o menu */
 nav {
     background-color: #0073b1; /* Azul LinkedIn */
-    padding: 25px 0; /* Aumenta o padding para garantir maior distância entre o conteúdo e o menu */
+    padding: 15px 0;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -45,18 +46,16 @@ nav ul li a {
     transition: font-size 0.3s ease; /* Transição suave para o aumento da fonte */
 }
 nav ul li a:hover {
-    /* Não muda o fundo */
-    background-color: transparent; /* Mantém o fundo transparente */
+    background-color: #005b8c;
     font-size: calc(1em + 1px); /* Aumenta a fonte em 1px */
 }
 
 /* Estilos para o cabeçalho */
 header {
     text-align: center;
-    padding: 100px 0 20px 0; /* Aumenta o padding para afastar mais o conteúdo do menu */
+    padding: 80px 0 20px 0;
     background-color: #0073b1;
     color: white;
-    margin-top: 20px; /* Adiciona uma margem para afastar mais do topo */
 }
 header h1 {
     font-size: 3em;
@@ -69,7 +68,7 @@ header p {
 
 /* Estilos para as seções */
 section {
-    margin-top: 100px; /* Aumenta o espaçamento entre o menu e a seção */
+    margin-top: 60px;
     margin-bottom: 40px;
 }
 h2 {
